control content and settings page - alignment fixes

--- a/src/app/main/settings/settings.component.scss
+++ b/src/app/main/settings/settings.component.scss
@@ -145,7 +145,7 @@
   .settings-row{
      flex-grow: 1;
     width: 60%;
-    padding-left: 60px;
+    //padding-left: 60px;
     padding-top: 24px;
   }
   .below-col-container{
